[gd_scene load_steps=5 format=3 uid="uid://bvrka4o3sreu0"]

[ext_resource type="Script" path="res://scenes/ui/message_banner.gd" id="1_jtpdi"]

[sub_resource type="Animation" id="Animation_aw0av"]
resource_name = "default"
length = 3.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35, 2, 3.5),
"transitions": PackedFloat32Array(1, 1, 4.14106, 1),
"update": 0,
"values": [Vector2(-640, 164), Vector2(0, 164), Vector2(15, 164), Vector2(640, 164)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish"
}]
}

[sub_resource type="Animation" id="Animation_mkmof"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 164)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/ColorRect:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wsks"]
_data = {
"RESET": SubResource("Animation_mkmof"),
"default": SubResource("Animation_aw0av")
}

[node name="MessageBanner" type="CanvasLayer"]
script = ExtResource("1_jtpdi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4wsks")
}
autoplay = "default"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.541176, 0.0666667, 0.505882, 1)

[node name="IncomingMessage" type="Label" parent="Control/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ALIENS INCOMING"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="SuccessMessage" type="Label" parent="Control/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ALIEN FORCES REPELLED!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
